[tool.pytest.ini_options]
addopts = "-ra -q --black --cov --cov-report term-missing --cov-config .coveragerc --junitxml=test-reports/raumklima.xml"
filterwarnings=[
    "ignore:.*BlackItem.*:_pytest.warning_types.PytestDeprecationWarning",
    "ignore:.*BlackItem.*:_pytest.warning_types.PytestRemovedIn8Warning",
    "ignore:.*PyLintFile.*:_pytest.warning_types.PytestRemovedIn8Warning",
    "ignore:.*BlackItem.*:_pytest.warning_types.PytestWarning",
]
junit_family = "xunit2"
junit_logging = "all"
junit_log_passing_tests = "True"
junit_duration_report = "call"
junit_suite_name = "Raumklima"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.poetry]
name = "Raumklima"
version = "0.9.0"
description = "Python-Skripte zur Nutzung der berühmten Raumklimastation RS500."
authors = ["Jürgen Edelbluth <juergen@juergen.rocks>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
hidapi = {version = "^0.11.0", extras = ["rs500reader", "rs5002redis", "rs5002mqtt"], optional = true}
redis = {version = "^4.1.4", extras = ["check_rs500", "rs5002redis"], optional = true}
paho-mqtt = {version = "^1.6.1", extras = ["rs5002mqtt"], optional= true}

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-black = "^0.3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
