[tool.pytest.ini_options]
addopts = "--black --cov --cov-report term-missing --cov-config .coveragerc --junitxml=test-reports/raumklima.xml"
filterwarnings=[
    "ignore:.*BlackItem.*:_pytest.warning_types.PytestDeprecationWarning",
    "ignore:.*BlackItem.*:_pytest.warning_types.PytestRemovedIn8Warning",
    "ignore:.*PyLintFile.*:_pytest.warning_types.PytestRemovedIn8Warning",
    "ignore:.*BlackItem.*:_pytest.warning_types.PytestWarning",
]
junit_family = "xunit2"
junit_logging = "all"
junit_log_passing_tests = "True"
junit_duration_report = "call"
junit_suite_name = "Raumklima"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.poetry]
name = "Raumklima"
version = "0.9.0"
description = "Python-Skripte zur Nutzung der berühmten Raumklimastation RS500."
authors = ["Jürgen Edelbluth <juergen@juergen.rocks>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
hidapi = {version = "^0.11.0", optional = true}
redis = {version = "^4.2.2", optional = true}
paho-mqtt = {version = "^1.6.1", optional= true}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-black = "^0.3.12"
behave = "^1.2.6"

[tool.poetry.extras]
rs500reader = ["hidapi"]
rs5002redis = ["hidapi", "redis"]
rs5002mqtt = ["hidapi", "paho-mqtt"]
check_rs500 = ["hidapi", "redis"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
